--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "type": "git",
     "url": "git+https://github.com/Skaro2336/book-store.git"
   },
-  
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
@@ -27,6 +26,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
