--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "type": "git",
     "url": "git+https://github.com/Skaro2336/book-store.git"
   },
-  
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
@@ -23,10 +22,12 @@
     "firebase": "^9.23.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
-    "simplebar": "^6.2.5"
+    "simplebar": "^6.2.5",
+    "tiny-slider": "^2.9.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
